--- a/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
@@ -19,7 +19,13 @@
             if (dateDoc){
                 PF('cbDateDoc').uncheck();
             }
-        }
+            var docType = PF('cbmDocType');
+            if (docType){
+                PF('cbmDocType').show();            
+                PF('cbmDocType').uncheckAll();
+                PF('cbmDocType').hide();
+            }
+        }    
     </script> 
 
     <p:focus for="nameSearche"/>
