--- a/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
@@ -37,13 +37,13 @@
                             </p:menuitem>
                         </p:submenu>
                         <f:facet name="options">
-                            <p:commandButton value="#{bundle.ToForm}"
+                            <p:commandButton value="#{bundle.ToForm}" style="padding-top: 2px;"
                                              actionListener="#{docReportBean.makeReport()}"
                                              update="#{_frm}">
                                 <f:param name="isRequired" value="true"/>
                             </p:commandButton>
                             <p:spacer width="5" />
-                            <p:commandButton id="btnClose" icon="ui-icon-circle-close" style="float:right;"
+                            <p:commandButton id="btnClose" icon="ui-icon-circle-close" style="float:right; padding-top: 2px;"
                                              title="#{bundle.Close}"
                                              immediate="true"
                                              action="#{docReportBean.onCloseCard()}"> 
@@ -56,9 +56,9 @@
                                      columnClasses="ui-grid-col-3, ui-grid-col-6, ui-grid-col-3" >
                             <h:panelGroup>
                                 <p:outputLabel value="#{bundle.PeriodSelected}"/>
-                                <p:panelGrid columns="2" layout="grid" columnClasses="col10r, ui-grid-col-1" styleClass="ui-grid-col-12">
+                                <p:panelGrid columns="2" layout="grid" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
                                     #{bundle.With}
-                                    <p:calendar value="#{docReportBean.dateStart}" id="dateStart" 
+                                    <p:calendar value="#{docReportBean.dateStart}" id="dateStart" styleClass="ui-grid-col-12"
                                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20"                                                 
                                                 locale="#{sessionBean.locale}"
                                                 required="#{param['isRequired'] == 'true'}"
@@ -66,9 +66,9 @@
                                         <p:ajax event="dateSelect" listener="#{docReportBean.dateStartChange()}"/>
                                     </p:calendar>
                                 </p:panelGrid>
-                                <p:panelGrid columns="2" layout="grid" columnClasses="col10r, ui-grid-col-1" styleClass="ui-grid-col-12">
+                                <p:panelGrid columns="2" layout="grid" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
                                     #{bundle.At}
-                                    <p:calendar value="#{docReportBean.dateEnd}" id="dateEnd" 
+                                    <p:calendar value="#{docReportBean.dateEnd}" id="dateEnd" styleClass="ui-grid-col-12"
                                                 showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
                                                 locale="#{sessionBean.locale}"
                                                 required="#{param['isRequired'] == 'true'}"
