--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -18,13 +18,14 @@
 
                 <p:toolbar styleClass="ui-grid-col-12">
                     <f:facet name="right">
-                        <p:commandButton value="#{bundle.ExitNoSave}" style="float:right;"
+                        <p:commandButton value="#{bundle.ExitNoSave}" style="float:right; padding-top: 3px;"
                                          title="#{bundle.ExitWithoutSaving}"
                                          action="#{_bean.onFinalCancelSave()}"
                                          onclick="PF('confirm').hide();"
                                          icon="ui-icon-circle-close">
                         </p:commandButton>
-                        <p:commandButton value="#{bundle.Back}" style="float:right;"
+                        <p:spacer width="5" />
+                        <p:commandButton value="#{bundle.Back}" style="float:right; padding-top: 3px;"
                                          title="#{bundle.GoBackCard}"
                                          onclick="PF('confirm').hide();"
                                          icon="ui-icon-arrowreturnthick-1-w">
